Document access to KEGG pathways and updated matrix analysis.

--- a/notebooks/Cluster Analysis.ipynb
+++ b/notebooks/Cluster Analysis.ipynb
@@ -918,6 +918,21 @@
     "**Notes**:\n",
     "1. Am I seeing all of the GO terms?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gene and Terms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis\n",
+    "1. Plot number times regulated versus ratio of term count / gene count for groups"
+   ]
   }
  ],
  "metadata": {
