More decision tree analysis.

--- a/notebooks/State Assignment Using Decision Trees.ipynb
+++ b/notebooks/State Assignment Using Decision Trees.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provider = DataProvider()\n",
+    "provider.do()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -240,232 +250,29 @@
        "[5 rows x 1515 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Geenrate the feature data\n",
-    "provider = DataProvider()\n",
-    "provider.do()\n",
-    "df_Xdata = transform_data.aggregateGenes(provider=provider)\n",
-    "df_Xdata = df_Xdata.T\n",
-    "df_Xdata = df_Xdata.drop(index=\"T0\")\n",
-    "data_features = df_Xdata.columns\n",
-    "df_Xdata.columns = range(len(data_features))\n",
+    "def makeFeatureDF(provider):\n",
+    "    df_Xdata = transform_data.aggregateGenes(provider=provider)\n",
+    "    df_Xdata = df_Xdata.T\n",
+    "    df_Xdata = df_Xdata.drop(index=\"T0\")\n",
+    "    data_features = df_Xdata.columns\n",
+    "    df_Xdata.columns = range(len(data_features))\n",
+    "    return df_Xdata\n",
+    "\n",
+    "def makeFeatureColumns(provider):\n",
+    "    df_X = transform_data.aggregateGenes(provider=provider)\n",
+    "    df_X = df_X.T\n",
+    "    return df_X.columns.tolist()\n",
+    "\n",
+    "\n",
+    "df_Xdata = makeFeatureDF(provider)\n",
     "df_Xdata.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>timepoint</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>T0</th>\n",
-       "      <td>Normoxia</td>\n",
-       "      <td>b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T1</th>\n",
-       "      <td>Normoxia</td>\n",
-       "      <td>b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T2</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T3</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T4</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T5</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T6</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T7</th>\n",
-       "      <td>Transition</td>\n",
-       "      <td>c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T8</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T9</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T10</th>\n",
-       "      <td>Stage1a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T11</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T12</th>\n",
-       "      <td>Stage1a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T13</th>\n",
-       "      <td>Stage1a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T14</th>\n",
-       "      <td>Stage1a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T15</th>\n",
-       "      <td>Stage1a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T16</th>\n",
-       "      <td>Stage1b</td>\n",
-       "      <td>k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T17</th>\n",
-       "      <td>Stage1b</td>\n",
-       "      <td>k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T18</th>\n",
-       "      <td>Stage1b</td>\n",
-       "      <td>k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T19</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T20</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T21</th>\n",
-       "      <td>StageII</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T22</th>\n",
-       "      <td>Resuscitation</td>\n",
-       "      <td>r</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T23</th>\n",
-       "      <td>Resuscitation</td>\n",
-       "      <td>r</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T24</th>\n",
-       "      <td>Resuscitation</td>\n",
-       "      <td>r</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T25</th>\n",
-       "      <td>Resuscitation</td>\n",
-       "      <td>r</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    name color\n",
-       "timepoint                     \n",
-       "T0              Normoxia     b\n",
-       "T1              Normoxia     b\n",
-       "T2            Transition     c\n",
-       "T3            Transition     c\n",
-       "T4            Transition     c\n",
-       "T5            Transition     c\n",
-       "T6            Transition     c\n",
-       "T7            Transition     c\n",
-       "T8               StageII     y\n",
-       "T9               StageII     y\n",
-       "T10              Stage1a     g\n",
-       "T11              StageII     y\n",
-       "T12              Stage1a     g\n",
-       "T13              Stage1a     g\n",
-       "T14              Stage1a     g\n",
-       "T15              Stage1a     g\n",
-       "T16              Stage1b     k\n",
-       "T17              Stage1b     k\n",
-       "T18              Stage1b     k\n",
-       "T19              StageII     y\n",
-       "T20              StageII     y\n",
-       "T21              StageII     y\n",
-       "T22        Resuscitation     r\n",
-       "T23        Resuscitation     r\n",
-       "T24        Resuscitation     r\n",
-       "T25        Resuscitation     r"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create the classes\n",
-    "provider.df_stage_matrix"
    ]
   },
   {
@@ -478,44 +285,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare the state data\n",
-    "ser_state = provider.df_stage_matrix[cn.STAGE_NAME]\n",
-    "ser_state = ser_state.drop(index=\"T0\")\n",
-    "ser_state = ser_state.copy()\n",
-    "ser_state[ser_state == 'Normoxia'] = 'Resuscitation'\n",
-    "# Create converter from state name to numeric index\n",
-    "states = ser_state.unique()\n",
-    "state_dict = {k: v for v, k in enumerate(states)}\n",
-    "ser_Ydata = ser_state.apply(lambda k: state_dict[k] )"
+    "def makeClassSer(provider):\n",
+    "    ser_state = provider.df_stage_matrix[cn.STAGE_NAME]\n",
+    "    ser_state = ser_state.drop(index=\"T0\")\n",
+    "    ser_state = ser_state.copy()\n",
+    "    ser_state[ser_state == 'Normoxia'] = 'Resuscitation'\n",
+    "    # Create converter from state name to numeric index\n",
+    "    states = ser_state.unique()\n",
+    "    state_dict = {k: v for v, k in enumerate(states)}\n",
+    "    ser = ser_state.apply(lambda k: state_dict[k] )\n",
+    "    return ser\n",
+    "ser_Ydata = makeClassSer(provider)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Resuscitation': 0, 'Transition': 1, 'StageII': 2, 'Stage1a': 3, 'Stage1b': 4}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +320,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,6 +685,91 @@
    "source": [
     "# Effect of Fractional Decorrelations"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bug is that I'm sampling X but not keeping the associated Y."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcClassificationAccuracy(provider, frac):\n",
+    "    \"\"\"\n",
+    "    :param float frac: fraction decorrelate\n",
+    "    :return float, float: mean, std of classification error\n",
+    "    \"\"\"\n",
+    "    NUM_REPETITIONS = 5\n",
+    "    df_X = makeFeatureDF(provider)\n",
+    "    ser_Y = makeClassSer(provider)\n",
+    "    generator = empirical_distribution_generator.EmpiricalDistributionGenerator(df_X)\n",
+    "    df = generator.synthesize(len(df_X), frac)\n",
+    "    xvs = []\n",
+    "    for _ in range(NUM_REPETITIONS):\n",
+    "        df_full\n",
+    "        generator = empirical_distribution_generator.EmpiricalDistributionGenerator(df)\n",
+    "        df = generator.sample(len(df))\n",
+    "        clf = DecisionTreeClassifier(random_state=0)\n",
+    "        xvs.append(np.mean(cross_val_score(clf, df, ser_Y, cv=3)))\n",
+    "    return np.mean(xvs), np.std(xvs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.16825396825396827, 0.03451747392656104)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcClassificationAccuracy(provider, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.11111111, 0.22222222, 0.        ])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_X = makeFeatureDF(provider)\n",
+    "ser_Y = makeClassSer(provider)\n",
+    "generator = empirical_distribution_generator.EmpiricalDistributionGenerator(df_X)\n",
+    "df = generator.synthesize(len(df_X), 0)\n",
+    "clf = DecisionTreeClassifier(random_state=0)\n",
+    "cross_val_score(clf, df, ser_Y, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
