--- a/notebooks/Correlation Analysis.ipynb
+++ b/notebooks/Correlation Analysis.ipynb
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "1515"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cg.ax_heatmap.set_xticks([])"
+    "len(cg.dendrogram_row.reordered_ind)"
    ]
   }
  ],
