Included normalization for read counts.

--- a/notebooks/SVM Classification.ipynb
+++ b/notebooks/SVM Classification.ipynb
@@ -239,13 +239,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preparation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## SVM Analysis"
    ]
   },
@@ -270,7 +263,60 @@
    ],
    "source": [
     "lin_clf = svm.LinearSVC()\n",
-    "lin_clf.fit(data.df_X, data.ser_y) "
+    "lin_clf.fit(data.df_X, data.ser_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_class = []\n",
+    "for index in data.df_X.index:\n",
+    "     predicted = lin_clf.predict(data.df_X.loc[[index],:])[0]\n",
+    "     predicted_class.append(predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 1, 1, 1, 1, 1, 2, 2, 3, 2, 3, 3, 3, 3, 4, 4, 4, 2, 2, 2, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predicting a class\n",
+    "lin_clf.predict(data.df_X.loc[[\"T18\"],:])"
    ]
   },
   {
@@ -373,28 +419,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: 0.921693, std: 0.069423\n"
+      "mean: 0.925926, std: 0.039196\n"
      ]
     }
    ],
    "source": [
     "# Not clear what the score means since have class imbalances\n",
     "indices = list(data.df_X.index)\n",
+    "size = 5\n",
     "scores = []\n",
-    "for _ in range(5):\n",
+    "for _ in range(size):\n",
     "    indices = np.random.permutation(indices)\n",
     "    df_X = data.df_X.loc[indices, :]\n",
     "    ser_y = data.ser_y.loc[indices]\n",
     "    lin_clf.score(df_X, ser_y)\n",
     "    scores.append(cross_val_score(lin_clf, df_X, ser_y, cv=3))\n",
-    "print(\"mean: %f, std: %f\" % (np.mean(scores), np.std(scores)))"
+    "print(\"mean: %f, std: %f\" % (np.mean(scores), np.std(scores)/np.sqrt(size)))"
    ]
   },
   {
