Updates for analysis of SVM

--- a/notebooks/Random Forests.ipynb
+++ b/notebooks/Random Forests.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "{152, 153, 225, 226, 287, 717, 718, 1123, 1125, 1378, 1482, 1483}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "[0.6, 0.5, 0.6, 0.5, 0.48, 0.4]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,9 +596,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.88"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Compare the accuracy of trees with all features with those that only have top genes\n",
     "# Look at clf.oob_score__num_\n",
@@ -613,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +633,7 @@
        "0.88"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,6 +651,62 @@
     "### Observations\n",
     "1. Significant overlap between bootstrap and non-bootstrap features\n",
     "1. Try DT with top N features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features=1500, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=1000, n_jobs=None,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=1000, max_features=1500, random_state=0,\n",
+    "                            min_samples_split=2, bootstrap=True)\n",
+    "clf.fit(makeFeatureDF(provider), makeClassSer(provider))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = clf.estimators_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1515"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.n_features_"
    ]
   }
  ],
