Make warning messages optonal; fix interface bugs.

--- a/notebooks/Classification of Lab Samples.ipynb
+++ b/notebooks/Classification of Lab Samples.ipynb
@@ -2618,6 +2618,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ",Resuscitation,Transition,StageII,Stage1a,Stage1b\n",
+    "AM_D20_1,0.0,0.3,0.0,0.0,0.7\n",
+    "AM_D20_3,0.0,0.3,0.0,0.0,0.7\n",
+    "AM_D20_4,0.0,0.0,0.0,0.0,1.0\n",
+    "AM_D20_5,0.0,0.3,0.0,0.0,0.7\n",
+    "MDM_D20_1,0.0,0.3,0.0,0.0,0.7\n",
+    "MDM_D20_3,0.0,0.3,0.0,0.0,0.7\n",
+    "MDM_D20_4,0.0,1.0,0.0,0.0,0.0\n",
+    "MDM_D20_5,0.0,0.3,0.0,0.0,0.7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
